[package]
name = "kes-api"
version = "0.1.0"
edition = "2021"
authors = [ "Kelvin Samuel <kelvin@kks110.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.4.2", features = ["http", "d1"]  }
console_error_panic_hook = { version = "0.1.1" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"